--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "prettier": "3.6.2",
+    "shadcn": "^3.7.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
