--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.1",
